--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ theme_mode: light
 cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "assets/img/blog-avatar.jpeg"
+avatar: "/assets/img/avatar.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -144,7 +144,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: https://ints81.github.io
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
